# Sparkles

./: .gitignore  Cargo.toml  README.md
src/: decode.rs  main.rs  tty.rs
src/analyze/: mod.rs
src/audio_stream/: mod.rs  pulse_simple.rs
src/util/: event.rs  mod.rs
