[package]
name = "sparkles"
version = "0.1.0"
authors = ["Jared <jared@jaredbeckham.com>"]
edition = "2018"

[dependencies]
#basic-dsp = "0.8.0"
byteorder = "1.3"
libpulse-binding = "2.6.0"
libpulse-simple-binding = "2.6.1"
log = "^0.4.6"
#rms = "0.4.2"
simplelog = "^0.5.0"
termion = "1.5.2"
#dft = "0.5.5"
#fftw = "0.6.0"
